spacing fixes

--- a/project-3/css/styles.css
+++ b/project-3/css/styles.css
@@ -69,6 +69,7 @@ h4 {
 
 .inner {
     padding: 2.5em;
+    max-width:1400px;
 }
 
 .hero-container:before {
@@ -100,6 +101,11 @@ h4 {
     width:100%;
 }
 
+.blank-space {
+    height:50vh;
+    position:relative;
+}
+
 .hero-content {
     position: relative;
     z-index: 1;
@@ -117,10 +123,6 @@ h4 {
 nav {
     display:none;
     padding-top:.5em;
-}
-
-.about {
-    margin-top:200px;
 }
 
 .about img {
@@ -379,10 +381,16 @@ footer {
 
     .inner {
         margin: auto;
+        max-width:1400px;
         padding: 0em 7em 0em 7em;
     }
+
+    .blank-space {
+        height:50vh;
+        position:relative;
+    }
+
     .about {
-        margin-top:300px;
         display: grid;
         grid-template-columns: 2fr 1fr;
         height:100%;
@@ -521,8 +529,9 @@ footer {
 
 @media screen and (min-width:600px) {
 
-    .about {
-        margin-top:300px;
+    .blank-space {
+        height:50vh;
+        position:relative;
     }
 
     .store {
